Add test, testId and loader wait

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -5,6 +5,7 @@
   <ion-button
     class="ion-no-margin ion-justify-content-between"
     color="ibf-no-alert-primary "
+    data-testid="layer-menu-toggle-button"
     id="layer-menu-toggle-button"
     data-testid="layer-menu-toggle-button"
     (click)="toggleLayerMenu()"
