fix: get count per event from back-end again

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -140,7 +140,7 @@
               | translate: { adminAreaLabelPlural: adminAreaLabelPlural }
           }}
         </strong>
-        <span>{{ nrAffectedAreas + ' ' }}</span>
+        <span>{{ event.nrAffectedAreas + ' ' }}</span>
         @if (event.thresholdReached) {
           <span>{{
             '(' +
