Add test base and assertion

--- a/interfaces/IBF-dashboard/src/app/components/layer-control-info-popover/layer-control-info-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/layer-control-info-popover/layer-control-info-popover.component.html
@@ -5,7 +5,7 @@
       name="close-circle"
       size="large"
       (click)="closePopover()"
-      data-test="close-matrix-icon"
+      data-testid="close-matrix-icon"
       class="popover-close-button"
     ></ion-icon>
     <ion-card-title data-testid="layer-info-title">
