Add test without final assertion

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -36,6 +36,7 @@
                 }
                 @if (isRadioButton(layer.group)) {
                   <ion-icon
+                    data-testid="matrix-radio-button"
                     [name]="
                       layer.active
                         ? 'radio-button-on-outline'
