fix: no border on ion-input, also on focus

--- a/interfaces/IBF-dashboard/src/app/components/change-password-popover/change-password-popover.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/change-password-popover/change-password-popover.component.scss
@@ -5,3 +5,12 @@
 .change-password-form {
   width: 100%;
 }
+
+ion-input {
+  border: none;
+  background: transparent;
+
+  ::ng-deep .native-input {
+    box-shadow: none;
+  }
+}
