--- a/interfaces/IBF-dashboard/src/app/components/login-form/login-form.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/login-form/login-form.component.scss
@@ -2,6 +2,15 @@ ion-label[position='stacked'] {
   --color: var(--ion-color-ibf-no-alert-primary);
 }
 
+ion-input {
+  border: none;
+  background: transparent;
+
+  ::ng-deep .native-input {
+    box-shadow: none;
+  }
+}
+
 .eye-button {
   --color: var(--ion-color-ibf-no-alert-primary);
 }
