Add testId, asserttion and enum file with styles

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -64,7 +64,11 @@
   </ion-content>
 </ion-menu>
 
-<div id="ibf-dashboard-interface" class="ibf-dashboard-interface">
+<div
+  id="ibf-dashboard-interface"
+  data-testid="ibf-dashboard-interface"
+  class="ibf-dashboard-interface"
+>
   <ion-header
     class="ion-no-border"
     style="border-bottom: 1px solid var(--ion-color-ibf-no-alert-primary)"
