ci: use @use instead of @import

--- a/interfaces/IBF-dashboard/src/theme/ibf-colors/_index.scss
+++ b/interfaces/IBF-dashboard/src/theme/ibf-colors/_index.scss
@@ -1,4 +1,4 @@
-@import 'design-system-colors';
+@use 'design-system-colors';
 
 :root {
   --ion-color-ibf-no-alert-primary: var(--ion-color-fiveten-navy-900);
