move data test-id

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -19,6 +19,7 @@
           </span>
         </span>
         <app-tooltip
+          data-testid="tooltip-button"
           class="event-header--tooltip"
           [value]="'chat-component.common.event-tooltip' | translate"
           color="ibf-no-alert-primary"
@@ -84,6 +85,7 @@
           </span>
         </span>
         <app-tooltip
+          data-testid="tooltip-button"
           class="event-header--tooltip"
           [value]="'chat-component.common.event-tooltip' | translate"
           color="ibf-no-alert-primary"
