--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -165,10 +165,7 @@
                 >
                   <ion-row>
                     <ion-col>
-                      <app-aggregates
-                        areaStatus="triggered-or-warned"
-                      ></app-aggregates>
-                      <app-aggregates areaStatus="stopped"></app-aggregates>
+                      <app-aggregates></app-aggregates>
                     </ion-col>
                   </ion-row>
                   <ion-row class="margin-top-auto">
