Add testID and test base

--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
@@ -93,6 +93,7 @@
         </ion-col>
         <ion-col size-lg="1" size-md="1" size-xs="1">
           <ion-item
+            data-testid="action-summary-info"
             lines="none"
             class="areas-of-focus-item-information-icon ion-no-padding"
             data-test="icon-row"
