Change test-ids for the elements fix test

--- a/interfaces/IBF-dashboard/src/app/components/logos/logos.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/logos/logos.component.html
@@ -2,5 +2,5 @@
   logo of (country | async)?.countryLogos[(disasterType | async)?.disasterType];
   track logo
 ) {
-  <img data-test="logo-image" src="assets/logos/{{ logo }}" />
+  <img data-testid="logo-image" src="assets/logos/{{ logo }}" />
 }
