--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
@@ -30,19 +30,16 @@
     </div>
     <div class="ion-align-items-center">
       <ion-row class="ion-align-items-center">
-        <app-logos data-testid="user-state-country-logos"></app-logos>
+        <app-logos></app-logos>
         <ion-item lines="none">
-          <ion-col
-            data-testid="user-state-display-name-label"
-            class="ion-no-padding"
-          >
+          <ion-col class="ion-no-padding">
             @if (isLoggedIn) {
               <ion-title size="small" class="ion-no-padding"
                 >Logged In As:</ion-title
               >
               <ion-title
                 size="small"
-                data-test="user-display-name"
+                data-testid="user-display-name"
                 class="ion-no-padding"
               >
                 <strong
