fix: get formatted eventname + refactor note + small typing AB#33247

--- a/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.html
@@ -38,7 +38,7 @@
           )
         "
       >
-        {{ eventState?.event?.eventName }}
+        {{ eventState?.event?.eventName.split('_')[0] }}
       </ion-button>
     }
     @if (showBreadcrumb(mapViewEnum.adminArea)) {
