chore: remove ZWE monthlyForecastInfo AB#33425

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -133,7 +133,7 @@
             }
             <br />
             @if (countryDisasterSettings?.showMonthlyEapActions) {
-              @if (forecastInfo && country?.countryCodeISO3 === 'KEN') {
+              @if (forecastInfo) {
                 @if (area?.eapActions; as actions) {
                   <div class="ion-margin-bottom">
                     <ion-note size="small">
