--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -153,6 +153,7 @@
                         <span>
                           <strong>{{ forecast }}</strong>
                           @if (!isLast) {
+                            {{ ' ' }}
                             <span>{{
                               'chat-component.drought.active-event.forecast-info.and'
                                 | translate
@@ -161,9 +162,14 @@
                         </span>
                       }
                       {{ ' ' }}
-                      <span>{{
-                        getNumberOfActions(actions.length, forecastInfo?.length)
-                      }}</span>
+                      <span
+                        [innerHTML]="
+                          getNumberOfActions(
+                            actions.length,
+                            forecastInfo?.length
+                          )
+                        "
+                      ></span>
                     </ion-note>
                   </div>
                 }
