refactor: process rename throughout codebase

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -71,7 +71,7 @@
           [disasterTypeName]="disasterType?.disasterType"
           [clearOutMessage]="getClearOutMessage(event)"
           [countryCodeISO3]="country?.countryCodeISO3"
-          [areas]="triggeredAreas"
+          [areas]="alertAreas"
           [adminAreaLabelPlural]="adminAreaLabelPlural"
           [mainExposureIndicatorLabel]="mainExposureIndicatorLabel"
           [mainExposureIndicatorNumberFormat]="
