--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
@@ -14,7 +14,7 @@
       expand="full"
       disabled="{{ timeStepButton.disabled }}"
       color="{{
-        timeStepButton.thresholdReached
+        timeStepButton.forecastTrigger
           ? 'ibf-trigger-alert-secondary'
           : 'ibf-no-alert-tertiary'
       }}"
@@ -22,7 +22,7 @@
       data-testid="timeline-button"
       [class.active]="timeStepButton.active"
       [class.alert]="
-        timeStepButton.thresholdReached && !timeStepButton?.disabled
+        timeStepButton.forecastTrigger && !timeStepButton?.disabled
       "
       [class.noEvent]="timeStepButton.noEvent"
       (click)="
@@ -35,8 +35,8 @@
       <app-date-button
         [date]="timeStepButton.date"
         [active]="!timeStepButton.disabled"
-        [alert]="timeStepButton.alert"
-        [thresholdReached]="timeStepButton.thresholdReached"
+        [forecastAlert]="timeStepButton.forecastAlert"
+        [forecastTrigger]="timeStepButton.forecastTrigger"
         [eventName]="timeStepButton.eventName"
         [duration]="timeStepButton.duration"
       ></app-date-button>
