refactor: rename event-place-code properties + related code AB#33571

--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
@@ -1,4 +1,4 @@
-@if (eventState?.thresholdReached && showAreasOfFocusSummary()) {
+@if (eventState?.forecastTrigger && showAreasOfFocusSummary()) {
   <ion-row
     class="component-title"
     color="ibf-secondary"
