refactor: replace last model date with last upload date

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -6,7 +6,7 @@
           'chat-component.common.warn-label.message'
             | translate
               : {
-                  lastModelRunDate,
+                  lastUploadDate,
                   name: authService.displayName,
                 }
         "
